# surge-config-server

./: .gitignore  Cargo.toml  README.md  build_linux.sh
src/: fetcher.rs  main.rs
src/models/: configuration.rs  mod.rs  surge.rs
