[package]
name = 'surge-config-server'
version = '0.1.0'
authors = ['Nearsyh <nearsy.h@gmail.com>']
edition = '2018'

[dependencies]
actix-web = '2'
actix-rt = '1'
actix-cors = '0.2'
actix = '0.9'
reqwest = '0.10'
futures = '0.3.4'
regex = '1'
jfs = '0.6'
tempdir = '0.3'
lazy_static = '1'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.tokio]
version = '0.2'
features = ['macros']
